--- a/trunk/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
+++ b/trunk/Empresa/Circuitos/Ventas/Ventas-con-transporte-propio.tex
@@ -62,15 +62,11 @@ A su vez, realiza un control antes de que dichos documentos sean enviados al cli
 \subsubsection{Formularios de Ventas}
 
 %%%%%%%%%%%%%%%%%%% TODO!!! %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Pasar los documentos a imagenes y describir cada campo %
+%               describir cada campo                     %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin {description}
- \item \underline{\textbf{Factura}} \\
-	 \includepdf[pages=1, scale=0.9]{./Empresa/Circuitos/Ventas/ModeloFactura.pdf}
- \item \underline{\textbf{Hoja de Ruta}} \\
-	 \includepdf[pages=1, scale=0.9]{./Empresa/Circuitos/Ventas/ModeloHojaRuta.pdf}
- \item \underline{\textbf{Remito}}  \\
-	 \includepdf[pages=1, scale=0.9]{./Empresa/Circuitos/Ventas/ModeloRemito.pdf}
+ \includegraphics{./Images/FormulariosIEP/Factura.png}
+ \includegraphics{./Images/FormulariosIEP/Remito.png}
 \end {description}
 
 
