Circuito teorico produccion terminado y arregle la estructura del informe para que corresponda con el enunciado

--- a/Circuitos-Teoricos/Produccion/circuito-produccion.tex
+++ b/Circuitos-Teoricos/Produccion/circuito-produccion.tex
@@ -190,8 +190,41 @@
  % orden-de-produccion.png: 661x852 pixel, 96dpi, 17.49x22.54 cm, bb=0 0 496 639
 \end{center}
 
+\pagebreak
+\begin{itemize}
+ \item \textbf{Objetivo}: Es un documento en el que se especifican las operaciones que deben realizar la producci\'on.
+ \item \textbf{Alcance}: Es un documento interno de la empresa.
+\end{itemize}
+
 \subsubsection{Descripción}
-\emph{\textbf{TODO}}
+\begin{enumerate}
+ \item Logo de la empresa.
+ \item Número de Orden de Producci\'on.
+ \item Cliente / Destino.
+ \item Cantidad a realizar.
+ \item Fecha de generaci\'on de la Orden de Producci\'on.
+ \item Fecha de inicio de la producción.
+ \item Fecha de finalización de la producción prevista.
+ \item N\'umero de código interno de la producci\'on.
+ \item N\'umero de plano.
+ \item N\'umero de operaci\'on.
+ \item Descripci\'on de la operaci\'on.
+ \item M\'aquina o puesto de trabajo.
+ \item Tiempo asignado (minutos).
+ \item Fecha / Hora de inicio.
+ \item Fecha / Hora de fin.
+ \item N\'umero de legajo.
+ \item C\'odigo del material a retirar por almac\'en.
+ \item Descripci\'on del material a retirar por almac\'en.
+ \item Unidad del material a retirar por almac\'en.
+ \item Cantidad requerida del material a retirar por almac\'en.
+ \item Fecha de retiro del material del almac\'en.
+ \item Legajo de retiro del material del almac\'en.
+ \item N\'umero de la operaci\'on donde se utilizar\'a dispositivos y herramientas.
+ \item M\'aquina a utilizar.
+ \item Dispositivo a utilizar.
+ \item Observaciones.
+\end{enumerate}
 
 \pagebreak
 \subsection{Hoja de Ruta}
@@ -200,8 +233,37 @@
  % hoja-de-ruta.png: 823x697 pixel, 96dpi, 21.77x18.44 cm, bb=0 0 617 523
 \end{center}
 
+\pagebreak
+\begin{itemize}
+ \item \textbf{Objetivo}: Es un documento en el que se especifican las operaciones que se realizan sobre un mismo artículo hasta el momento de transformarlo en otro.
+ \item \textbf{Alcance}: Es un documento interno de la empresa.
+\end{itemize}
+
 \subsubsection{Descripción}
-\emph{\textbf{TODO}}
+\begin{enumerate}
+ \item Logo de la empresa.
+ \item C\'odigo interno de la pieza.
+ \item Fecha de vigencia.
+ \item Fecha de elaboraci\'on.
+ \item Fecha de aprobaci\'on.
+ \item Número de la hoja de ruta.
+ \item Descripci\'on de la pieza.
+ \item Pedido de construcci\'on.
+ \item Materiales a utilizar.
+ \item N\'umero de operaci\'on.
+ \item Descripci\'on general.
+ \item Descripci\'on de las tareas a realizar.
+ \item Secci\'on de la m\'aquina. 
+ \item Nombre de la m'aquina.
+ \item N\'umero de pasadas por la m\'aquina.
+ \item N\'umero de revoluciones por minuto para la m\'aquina.
+ \item Dispositivos y herramientas.
+ \item N\'umero de operario.
+ \item Calificaci\'on del operario.
+ \item Tiempo standard de preparacion de m\'aquina (segundos).
+ \item Tiempo standard de elaboraci\'on (seg/pieza).
+\end{enumerate}
+
 
 \pagebreak
 \section{Normas de control interno generales y específicas de Producci\'on}
