--- a/Informe.tex
+++ b/Informe.tex
@@ -160,25 +160,15 @@ Moreno Salas, Josué Fabio & Intercambio & josue.nalgarito@gmail.com \\
 
 % ----------------------------- Inicio del tp -----------------------------
 
-% Introducción.
-%\chapter*{Introducción}
-%\addcontentsline{toc}{chapter}{Introducción}
-
-\part{Práctica - Circuitos Te\'oricos}
-
-\chapter{Circuito Pago a Proveedores}
-\input{./Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex}
-
-\chapter{Circuito Producci\'on}
-\input{./Circuitos-Teoricos/Produccion/circuito-produccion.tex}
-
-\part{Análisis de Empresa}
 \chapter*{Enunciado}
 \begin{center}
  \includegraphics[keepaspectratio=true]{./Images/pagina1-guia.png}
  % pagina1-guia.png: 632x889 pixel, 96dpi, 16.72x23.52 cm, bb=0 0 474 667
 \end{center}
 \includepdf[pages=2-11, scale=0.9, pagecommand={\thispagestyle{empty}}]{./2012_GuiaTPCampo.pdf}
+
+\part{Memoria Descriptiva de la Empresa. Historial de la misma. Resumen de los Sistemas de
+información de la Empresa.}
 
 \chapter{Elección de la empresa}
 \include{Empresa/Eleccion}
@@ -191,7 +181,19 @@ Moreno Salas, Josué Fabio & Intercambio & josue.nalgarito@gmail.com \\
 
 \include{Empresa/Empresa}
 
-\pagebreak
+\part{Sistemas de Información teóricos dados en las Clases Prácticas. Cursogramas teóricos.
+Formularios teóricos de los sistemas de información estudiados. Normas de control interno
+generales y particulares.}
+
+\chapter{Circuito Pago a Proveedores}
+\input{./Circuitos-Teoricos/Pago-a-Proveedores/circuito-pago-a-proveedores.tex}
+
+\chapter{Circuito Producci\'on}
+\input{./Circuitos-Teoricos/Produccion/circuito-produccion.tex}
+
+
+\part{Cursogramas relevados de la empresa con la simbología correspondiente. Manual de cada cursograma relevado.}
+
 \section{Circuitos relevados de la empresa}
 \input{./Empresa/Circuitos/Compras/Compra-de-materiales-y-entrada-de-inventario.tex}
 \pagebreak
@@ -199,7 +201,8 @@ Moreno Salas, Josué Fabio & Intercambio & josue.nalgarito@gmail.com \\
 \pagebreak
 \input{./Empresa/Circuitos/Cobranzas/Cobro-de-facturas.tex}
 
-\pagebreak
+\part{Presupuesto}
+
 \section{Presupuesto}
 
 % ------------------------------ Fin del tp -------------------------------
